--- a/stock/css/stylesheet.css
+++ b/stock/css/stylesheet.css
@@ -8,6 +8,8 @@ header{
     width: 100%;
     height:85px;
     background-color: rgb(31, 175, 139);
+    margin: 0px;
+    padding: 0px ;
 }
 #logo{
     float: left;
@@ -49,8 +51,7 @@ header{
     padding: 2px 15px;
     background-color:rgb(210, 250, 240) ;
     border: 2px solid rgb(97, 97, 97);
-    border-radius: 4px;
-    
+    border-radius: 4px;    
 }
 
  /*Add information box*/
@@ -102,6 +103,7 @@ header{
     border-radius: 5px;
     color: rgb(87, 87, 87);
     border: 2px solid rgb(112, 112, 112);
+    visibility: visible;
 }
 #submit:enabled:hover{
     font-size: 17px;
@@ -111,14 +113,53 @@ header{
 #submit:disabled{
     color:rgb(122, 122, 122);
 }
+#editButton{
+    float: right;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 3px 10px;
+    border-width: 2px;
+    margin-right: 5px;
+    background-color:rgb(205, 255, 243) ;
+    border-radius: 5px;
+    color: rgb(87, 87, 87);
+    border: 2px solid rgb(112, 112, 112);
+}
+#editButton:enabled:hover{
+    font-size: 17px;
+    background-color:rgb(122, 206, 185) ;
+    border-radius: 5px;
+}
+#editButton:disabled{
+    color:rgb(122, 122, 122);
+}
+#deleteButton{
+    float: right;
+    font-size: 16px;
+    font-weight: bold;
+    border-width: 2px;
+    padding: 3px 10px;
+    margin-right: 5px;
+    background-color:rgb(205, 255, 243) ;
+    border-radius: 5px;
+    color: rgb(87, 87, 87);
+    border: 2px solid rgb(112, 112, 112);
+}
+#deleteButton:enabled:hover{
+    font-size: 17px;
+    background-color:rgb(122, 206, 185) ;
+    border-radius: 5px;
+}
+#deleteButton:disabled{
+    color:rgb(122, 122, 122) ;
+}
 
 /* main table */
 #mainTable{
     margin-top: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    height: 250px;
-    overflow:auto;
+    margin-left: 3%;
+    margin-right: 3%;
+    height: 70%;   
 }
 #center{
     margin-left: auto;
@@ -142,6 +183,7 @@ header{
     border-bottom: 1px solid rgb(148, 148, 148);
     text-align: center;
     padding:5px 0px;
+   
 }
 #mainTable table tr td:last-child{
     word-wrap:break-word ;
@@ -150,6 +192,11 @@ header{
     background-color:rgb(255, 255, 255) ;
     color: rgb(104, 104, 104);
     font-weight: 500;
+    /* overflow-x:hidden; */
+}
+#mainTable table tr:hover{
+    background-color: rgb(239, 252, 249) ;
+    cursor: pointer;
 }
 tr{
      transition: all .10s ease-in-out;
@@ -161,14 +208,19 @@ tr{
 
 
 /********** Large devices only **********/
-@media (min-width: 1200px) {
+@media (min-width: 1255px) {
 
+    
 
 }
 
 /********** Medium devices only **********/
 @media (min-width: 992px) and (max-width: 1199px) {
 
+    #mainTable{
+        height: 70%;
+        margin-right: 3%;
+    }
 
 }
 
