--- a/stock/css/stylesheet.css
+++ b/stock/css/stylesheet.css
@@ -3,11 +3,18 @@ body{
     padding: 0px;
     font-family: whitney ssm a,whitney ssm b,lucida grande,lucida sans,Verdana,Helvetica,Arial,sans-serif;
 }
+img{
+    width: 1200px;
+    height: 500px;
+    padding-left: 20%;
+    padding-bottom: 30px;
+    margin-top: 15px;
+}
 /* header, logo, add button, search bar */
 header{
     width: 100%;
     height:85px;
-    background-color: rgb(31, 175, 139);
+    background-color: rgb(28, 63, 88);
     margin: 0px;
     padding: 0px ;
 }
@@ -16,7 +23,7 @@ header{
     padding: 0px 30px;
     margin-top: 20px;
     color: rgb(235, 233, 233);   
-    text-shadow: 2px 1px rgb(70, 70, 70);
+    text-shadow: 2px 1px rgb(114, 114, 114);
 }
 #actions .actionCont{
     display: flex;
@@ -34,14 +41,14 @@ header{
     font-size: 15px;
     font-weight: bold;
     border-width: 2px;
-    background-color:rgb(134, 224, 202) ;
+    background-color:rgb(119, 188, 228) ;
     border-radius: 5px;
     color: rgb(70, 70, 70);
 }
 #addButton:enabled:hover{
     font-size: 17px;
     font-weight: bolder;
-    background-color:rgb(122, 206, 185) ;
+    background-color:rgb(169, 217, 252) ;
     border-radius: 5px;
 }
 #addButton:disabled{
@@ -49,7 +56,7 @@ header{
 }
 #searchButton{
     padding: 2px 15px;
-    background-color:rgb(210, 250, 240) ;
+    background-color:rgb(202, 229, 248) ;
     border: 2px solid rgb(97, 97, 97);
     border-radius: 4px;    
 }
@@ -61,11 +68,11 @@ header{
     border: 0px;
     border-radius: 8px;
     margin-top: 20px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     margin-left: auto;
     margin-right:auto;
     padding: 10px;
-    background-color: rgb(230, 238, 236);
+    background-color: rgb(202, 229, 248);
     display: flex;
     font-weight: 500;
     color: rgb(70, 70, 70);
@@ -75,7 +82,7 @@ header{
     margin-right: 5%;
 }
 #addData input, select, textarea{
-    background-color:rgb(244, 255, 253) ;
+    background-color:rgb(244, 250, 255) ;
     border: 1.5px solid rgb(97, 97, 97);
     border-radius: 3px;
 }
@@ -99,7 +106,7 @@ header{
     padding: 3px 10px;
     font-size: 16px;
     font-weight:bold;
-    background-color:rgb(205, 255, 243);
+    background-color:rgb(129, 192, 228);
     border-radius: 5px;
     color: rgb(87, 87, 87);
     border: 2px solid rgb(112, 112, 112);
@@ -107,7 +114,7 @@ header{
 }
 #submit:enabled:hover{
     font-size: 17px;
-    background-color:rgb(122, 206, 185)  ;
+    background-color:rgb(122, 179, 206)  ;
     border-radius: 5px;
 }
 #submit:disabled{
@@ -120,14 +127,14 @@ header{
     padding: 3px 10px;
     border-width: 2px;
     margin-right: 5px;
-    background-color:rgb(205, 255, 243) ;
+    background-color:rgb(129, 192, 228) ;
     border-radius: 5px;
     color: rgb(87, 87, 87);
     border: 2px solid rgb(112, 112, 112);
 }
 #editButton:enabled:hover{
     font-size: 17px;
-    background-color:rgb(122, 206, 185) ;
+    background-color:rgb(122, 179, 206) ;
     border-radius: 5px;
 }
 #editButton:disabled{
@@ -140,14 +147,14 @@ header{
     border-width: 2px;
     padding: 3px 10px;
     margin-right: 5px;
-    background-color:rgb(205, 255, 243) ;
+    background-color:rgb(129, 192, 228) ;
     border-radius: 5px;
     color: rgb(87, 87, 87);
     border: 2px solid rgb(112, 112, 112);
 }
 #deleteButton:enabled:hover{
     font-size: 17px;
-    background-color:rgb(122, 206, 185) ;
+    background-color:rgb(122, 179, 206) ;
     border-radius: 5px;
 }
 #deleteButton:disabled{
@@ -167,7 +174,7 @@ header{
 }
 #mainTable table tr th{
    border-collapse: collapse;
-   background-color: rgb(118, 194, 176) ;
+   background-color: rgb(129, 192, 228) ;
    text-align: center;
    color: rgb(255, 255, 255);
    text-shadow: 1px 1px rgb(107, 107, 107);
@@ -195,7 +202,7 @@ header{
     /* overflow-x:hidden; */
 }
 #mainTable table tr:hover{
-    background-color: rgb(239, 252, 249) ;
+    background-color: rgb(244, 250, 255) ;
     cursor: pointer;
 }
 tr{
